<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="10dp"
    android:padding="5dp"
    android:layout_margin="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/buy"
            android:contentDescription="@string/buy" />

        <TextView
            android:id="@+id/winno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/partici"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/TextView2135"
            android:text ="@string/_1000"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/no_of_participants"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto"

            android:layout_marginTop="5dp"
            android:text="@string/winning_amount"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/roboto"

            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/price"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:layout_toEndOf="@+id/textView"
            android:text="@string/_1000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView2135"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/no_of_winners"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/amtstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/textView3"
            android:text="@string/_1000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amtstop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/amtstart3"
            android:text="@string/_1000"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amtstart3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:layout_toEndOf="@+id/amtstart"
            android:text="@string/space"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/partici"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:layout_toEndOf="@+id/textView4"
            android:text="@string/_1000"
            android:textSize="16sp"
            android:textStyle="normal" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>